deploy/k8s/networking/cncf-ingress.yml
apiVersion: networking.k8s.io/v1
# apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cncf-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/" 
    appgw.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: "cncf2022.radyalabs.id"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service :
                name : web-svc
                port :
                  number : 80
          - path: /v1/*
            pathType: Prefix
            backend:
              service :
                name : web-svc-v1
                port :
                  number : 80
          - path: /v2/*
            pathType: Prefix
            backend:
              service :
                name : web-svc-v2
                port :
                  number : 80
